Removing tab-based focus from mouse users

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,8 @@ body {
 #root{
   display: contents;
 }
+
+/* When mouse is detected, ALL focused elements have outline removed. */
+body.using-mouse :focus {
+  outline: none;
+}
